# djangobrew.com

./: .env.example  .gitignore  Dockerfile  README.md  app.py  justfile  pyproject.toml
.github/workflows/: deploy.yml
site/static/css/: djangobrew.css  tailwind-3.3.5.css
site/templates/: _episode_footer.html  feedback.html  index.html
site/templates/episodes/: *.html  index.html
site/templatetags/: buzzsprout.py
static/css/: buzzsprout.css  djangobrew.css
static/js/: dork.min.js
templates/: _episode_footer.html  _header.html  _newsletter.html  about.html  base.html  index.html
templates/episodes/: *.html  index.html
templatetags/: buzzsprout.py
