[project]
name = "djangobrew"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [
  {name = "Adam Hill", email = "adam@adamghill.com"},
  {name = "Sangeeta Jadoonanan", email = "sjbitcode@gmail.com"}
]
dependencies = [
    "coltrane[deploy,json5]==0.36.0",
    "httpx>=0.27.0",
    "redis>=5.0.3,<6.0.0",
    "hiredis>=2.3.2,<3.0.0",
]

[tool.ruff]
src = ["."]
exclude = []
target-version = "py310"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore unused variables
  "F841",
   # Ignore exception strings
  "EM101", "EM102",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".

[tool.ruff.isort]
known-first-party = []

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]
